# key_hunter

./: .env.example  .gitignore  Cargo.toml  README.md
config/: default.toml
docs/: extending.md  usage.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: config.rs  error.rs  mod.rs  results.rs  traits.rs
src/detectors/: aws.rs  claude.rs  gemini.rs  github_keys.rs  google.rs  misc.rs  mod.rs  openai.rs  openrouter.rs  shodan.rs  slack.rs  stripe.rs  xai.rs
src/providers/: github.rs  mod.rs
src/reporters/: email.rs  github.rs  mod.rs  template.rs
src/utils/: http.rs  mod.rs  patterns.rs  rate_limiter.rs
src/validators/: claude.rs  gemini.rs  github.rs  google.rs  mod.rs  openai.rs  openrouter.rs  shodan.rs  slack.rs  stripe.rs  xai.rs
templates/: issue.md
tests/: config_rate_limits_test.rs
