[package]
name = "key_hunter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A modular framework for hunting API keys in code repositories"
license = "MIT"
repository = "https://github.com/yourusername/key_hunter"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP with libcurl
curl = "0.4"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1.10"
lazy_static = "1.5"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.12"

[[bin]]
name = "key-hunter"
path = "src/main.rs"

[lib]
name = "key_hunter"
path = "src/lib.rs"
